highlighting that works.  Hovering over tokens or parens glows them.

--- a/src/main/resources/styles/basic.css
+++ b/src/main/resources/styles/basic.css
@@ -10,20 +10,7 @@
     font-family: 'Source Code Pro Bold';
     src: url('../fonts/SourceCodePro-Bold.ttf');
 }
-
-.normal {-fx-font: 14 'Source Code Pro Regular';}
-.medium {-fx-font: 14 'Source Code Pro Medium';}
-.bold   {-fx-font: 16 'Source Code Pro Bold';}
-
-.red {-fx-fill: red;}
-.black  {-fx-fill: black;}
-.blue    {-fx-fill: blue;}
-.teal    {-fx-fill: #005d69;}
-.green    {-fx-fill: #005500;}
-.orange    {-fx-fill: #ff5400;}
-.pink {-fx-fill: #9918ff;}
-
-.underline {-fx-underline: true}
-
-.syntax-error {-fx-fill: #ff5400; -fx-underline: true}
-.error {-fx-fill: red; -fx-underline: true}
+@font-face {
+    font-family: 'Source Code Pro Semibold';
+    src: url('../fonts/SourceCodePro-Semibold.ttf');
+}
