Small adjustments and corrections.

--- a/src/main/resources/styles/codearea.css
+++ b/src/main/resources/styles/codearea.css
@@ -1,6 +1,6 @@
 /* control the labels of the linenumber-factory fuction */
 .lineno {
-    -fx-font-size: 14 "Source Code Pro Regular";
+    -fx-font-size: 16 "Source Code Pro Medium";
     -fx-text-fill: #aaa;
     -fx-background-color: transparent;
     -fx-padding: 0 30 0 15;
