- Added "paredit" - module and functionality to Input and Editor - Extended george.javafx with functionality for key-handling - Reworked some code with respect to JavaFX

--- a/src/main/resources/styles/codearea.css
+++ b/src/main/resources/styles/codearea.css
@@ -1,4 +1,4 @@
-/* control the labels of the linenumber-factory fuction */
+/* control the labels of the line number factory function */
 .lineno {
     -fx-font-size: 16 "Source Code Pro Medium";
     -fx-text-fill: #aaa;
@@ -6,3 +6,6 @@
     -fx-padding: 0 30 0 15;
 }
 
+.styled-text-area .caret {
+    -fx-stroke: BLUE;
+}
